# waybar-jalaly-calendar

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.opencode/plans/: implementation-plan.md
src/waybar_jalaly_calendar/: __init__.py  __main__.py  calendar.py  holidays.py  persian_utils.py
